# contrastive-qa-verifier-with-adversarial-unanswerable

./: .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/contrastive_qa_verifier_with_adversarial_unanswerable/: __init__.py
src/contrastive_qa_verifier_with_adversarial_unanswerable/evaluation/: metrics.py
src/contrastive_qa_verifier_with_adversarial_unanswerable/training/: trainer.py
src/contrastive_qa_verifier_with_adversarial_unanswerable/utils/: __init__.py  config.py
tests/: conftest.py  test_data.py  test_model.py  test_training.py
